--- a/CSS/GRID/ex02/style.css
+++ b/CSS/GRID/ex02/style.css
@@ -12,7 +12,7 @@ header{
 footer{
     background-color: white;
     border: 2px solid black;
-    height: 50px;
+    min-height: 50px;
 }
 .container {
     padding: 0.1rem;
@@ -21,12 +21,13 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex: 1 0 auto;
     /* definicao das colunas */
     gap: 0.5rem 0.5rem;
-    height: 100vh;
+    
 }
 .mainContent{
+    flex: 1 0 auto;
+    padding: 0.8rem;
     gap: 0.5rem 0.5rem;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
