--- a/CSS/projeto-grid/style.css
+++ b/CSS/projeto-grid/style.css
@@ -1,51 +1,193 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 20px;
 }
-img{
-    width: 100px;
-    
-}
-.container{
+
+
+
+.container {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+}
 
-}
-header{
+.header {
+    width: 100%;
+    min-height: 40px;
+    background-color: #292929;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #454545;
-    padding: 1.5rem;
-}
-.menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
-    
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 1rem;
+    gap: 8px 15px;
 }
-li{
-    list-style-type: none;
-    margin-right: 0.8rem;
-}
-.title{
 
+.logoNavBar, .logoFooter {
+    width: 180px;
 }
-.mainContent{
-    flex: 1 0 auto;
-    height: 100vh;
+
+.headerBtnGroup {
+    display: flex;
+    gap: 15px;
+}
+
+.navBtn {
+    font-size: 16px;
+    padding: 6px;
+    background-color: transparent;
+    border: 2px solid transparent;
+    color: white;
+    cursor: pointer;
+}
+
+.navBtn:hover {
+    border: 2px outset black;
+    border-radius: 10px;
+    transition: all 1s ease-in-out;
+}
+
+.sectionTitle {
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 1rem;
+    text-align: center;
+}
+
+.sectionDescription {
+    text-align: center;
+    color: #383838;
+}
+
+.gridContainer {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-auto-rows: minmax(300px, auto);
+    /*3fr main 1fr side*/
+    grid-template-columns: 3fr 1fr;
     grid-template-areas:
-    "item1 item2" ;
-    
+        "mainContent sidebarContent";
+    padding: 1rem;
+    flex: 1 0 auto;
+}
+
+.mainContent {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5rem;
+    grid-area: mainContent;
+    padding: 10px;
+}
+
+.categoryCard {
+    width: 13.8rem;
+    height: 19rem;
+    border-radius: 0.8rem;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.mainCardImg {
+    width: 100%;
+    height: 180px;
+    border-radius: 10px;
+}
+
+.sidebarCardImg {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.categoryCard:hover {
+    box-shadow: 3px 3px 16px rgba(0, 0, 0, 0.375);
+}
+
+.mainCategoryCardTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.3rem;
+}
+
+.mainCategoryCardDescription {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.3rem;
+}
+
+.sidebarContent {
+    background-color: #383838;
+    color: white;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 250px;
+    grid-area: sidebarContent;
+    gap: 20px;
+    border-radius: 10px;
+}
+
+.sidebarCard {
+    width: 75%;
+    border: 1px outset transparent;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.sidebarCard:hover {
+    box-shadow: 3px 3px 15px rgba(229, 226, 226, 0.242);
+}
+
+.sidebarCardTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 10px;
+}
+
+.sidebarCardImg {
+    width: 100%;
+    border-radius: 10px;
+}
+.footer{
+    min-height: 40px;
+    background-color: #292929;
+    color: white;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px;
+    gap: 15px;
+}
+.footerAnchor{
+    color: white;
+    text-decoration: none;
     
 }
-.item{
-    border: 1px solid black;
+
+@media (max-width: 630px) {
+    .gridContainer{
+        grid-template-columns: 2fr;
+        grid-template-areas: 
+        "mainContent"
+        "sidebarContent";
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    .categoryCard{
+        width: 13.8rem;
+    }
+    .sidebarContent{
+        min-width: auto;
+    }
+}
+@media (max-width: 485px) {
+    .header, .footerAnchor{
+        justify-content: center;
+        font-size: 20px;
+    }
 }
