--- a/CSS/projeto-grid/style.css
+++ b/CSS/projeto-grid/style.css
@@ -124,6 +124,9 @@
     grid-area: sidebarContent;
     gap: 20px;
     border-radius: 10px;
+    position: sticky;
+    top: 0;
+    right: 0;
 }
 
 .sidebarCard {
