--- a/node.web/04-html-dinamico/src/views/index.ejs
+++ b/node.web/04-html-dinamico/src/views/index.ejs
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título </title>
+    <title><%= title %></title>
 </head>
 <body>
     <h1>Renderizando Html dinamico com EJS</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam harum veniam officiis rem obcaecati nisi vero natus dignissimos illum nam.</p>
+    <p id="<%= 'teste' + "_" +(3*4) %>">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam harum veniam officiis rem obcaecati nisi vero natus dignissimos illum nam. <%= 'teste' + "_" +(3*4) %></p>
+    <br><br><br>
+    <p>
+        <%= message %>
+    </p>
 </body>
 </html>
